--- a/src/components/PikeWidget.astro
+++ b/src/components/PikeWidget.astro
@@ -62,3 +62,9 @@ const widgetConfig = {
         document.head.append(script);
     })();
 </script>
+
+<style>
+    .pike-widget {
+        min-height: 320px;
+    }
+</style>
