--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import CardBaseStyles from '../components/CardBaseStyles.astro';
+import HeroLayoutStyles from '../components/HeroLayoutStyles.astro';
 import '../styles/global.css';
 import '../styles/site.css';
 
@@ -26,6 +27,7 @@ const pageTitle = title === 'The League of Amazing Programmers' ? title : `${tit
   </head>
   <body>
     <CardBaseStyles />
+    <HeroLayoutStyles />
     <Header />
     <main>
       <slot />
