--- a/src/pages/donate/create-a-fundraiser.astro
+++ b/src/pages/donate/create-a-fundraiser.astro
@@ -3,6 +3,7 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
 import HeroSection from '../../components/HeroSection.astro';
 import SectionHeader from '../../components/SectionHeader.astro';
 import CalloutCard from '../../components/CalloutCard.astro';
+import DonatePageStyles from '../../components/DonatePageStyles.astro';
 
 
 ---
@@ -11,6 +12,7 @@ import CalloutCard from '../../components/CalloutCard.astro';
   title="Create a Fundraiser"
   description="Launch a peer-to-peer fundraiser or community event that powers scholarships and coding experiences for San Diego students."
 >
+  <DonatePageStyles />
   <HeroSection
     surface="alt"
     tag="Peer-to-Peer Giving"
