--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -208,7 +208,6 @@ import Section_40_60 from "../components/Section_40_60.astro";
             <li>Led by professional engineers</li>
             <li>Advanced topics: machine learning, cloud computing</li>
             <li>Professional development practices</li>
-            <li>Industry guest speakers and mentors</li>
           </ul>
         </CardBody>
         <CardFooter>
@@ -613,6 +612,11 @@ import Section_40_60 from "../components/Section_40_60.astro";
     gap: var(--space-lg);
     align-items: center;
     justify-content: center;
+  }
+
+  .support-card .link {
+    text-align: center;
+    display: block;
   }
 
   @media (max-width: 768px) {
